20 edits added in

--- a/lists_conversion_experience.rmd
+++ b/lists_conversion_experience.rmd
@@ -1,5 +1,5 @@
 ---
-title: "'Have you forgotten?' Conversion experiences in shopping lists"
+title: "Probabilities and propensities: conversion experiences in online grocery shopping"
 author: "Adrian Mackenzie"
 date: "`r Sys.Date()`"
 output:
@@ -15,7 +15,6 @@ header-includes:
     - \doublespacing
 ---
 
-# 'Have you forgotten?' Conversion experiences in shopping lists
 
 ```{r setup2, cache=FALSE, include=FALSE}
 library(knitr)
@@ -32,20 +31,22 @@ opts_chunk$set(cache=TRUE)
 
 ## Abstract
 
-This paper investigates practices of list-making associated with online grocery shopping at a UK-global supermarket chain, Tesco. 
-It reconstructs an account of how a recommender system suggests a small number of grocery items of personal relevance to each of the millions of online grocery shoppers. 
-I suggest that we can understand devices such as recommender systems as transformations or conversions of the temporal and agential fabric of the important social ordering device, the list.
-While all written lists mix past and future actions, actual and potential events, their re-writing by recommender systems adds a new operational dynamic.
-The incompleteness of lists, their propensity to expand or change, becomes more important than their capacity to  enumerate or rank things. 
-The conversion of lists from finite to in-definite in recommender systems suggests we might need to re-conceptualise how we think about social order and structure in media cultures. 
+We can understand devices such as recommender systems as attempts to transform or convert the temporal and agential fabric of social ordering practices. 
+This paper investigates practices of ordering in the setting of shopping lists and  online grocery orders. 
+Although all shopping lists mix past and future actions, actual and potential events, and normative and actual values, their re-writing by recommender systems adds a new operational dynamic.
+It reconstructs an account of how a recommender system suggests a small number of grocery items of personal relevance to each of the millions of online grocery shoppers in  a major UK supermarket chain. 
+The paper explores how the constitutive incompleteness of shopping lists, their propensity to expand or change, becomes more important than their capacity to  enumerate or rank things. 
+It argues that the conversion of lists from finite ordering to indeterminate propensity in recommender systems requires new ways of conceptualising social order. 
 
-## 
+# Probabilities and propensities: conversion experiences in online grocery shopping 
  
-Online grocery shopping at Tesco, a large supermarket chain based in the UK, includes recommendations for further grocery purchases under the title of 'Have you forgotten?'. When customers shop for groceries online, a list of five recommendations appear at the checkout stage. These recommendations are the product of a recommender system, an important category of operational device in big data (see for instance [@Striphas_2015] for analysis of Netflix recommendation; [@Morris_2015]  or [@Seaver_2015] for an account of music recommendations]).  The question 'have you forgotten?' is followed by a list of some  grocery items that could have been or are usually on a shopping list. The title of the suggestions is a bit misleading: the recommender system, as we will see, is not concerned with forgetting, with the many slips and oversights associated with shopping lists,  but rather with items that you didn't know should be on your list, perhaps because you have never thought of putting them there.
+Online grocery shopping at Tesco, a large supermarket chain based in the UK, includes recommendations for further grocery purchases under the title of 'Have you forgotten?'. When Tesco customers shop for groceries online, a list of five recommendations appear at the checkout stage. The recommendations are the product of a recommender system, an important category of operational device in big data (see for instance [@Striphas_2015] for analysis of Netflix recommendation; [@Morris_2015]  or [@Seaver_2015] for an account of music recommendations]).  The question 'have you forgotten?' is followed by a list of some  grocery items that could have been or are usually on a shopping list. The title of the suggestions is a bit misleading: the recommender system, as we will see, is not concerned with forgetting, with the many slips and oversights associated to which shopping is prone,  but rather with items that customers had not selected perhaps because they had never thought of buying them in the first place.
 
-The shelves of large contemporary supermarket are the endpoint of global logistic supply chains, in all their logistical, value-transforming and brand-mediated hypercomplexity (see [@Neilson_2012; @Tsing_2009] on logistics and power are the endpoint of global logistic supply chains, in all their logistical, value-transforming and brand-mediated hypercomplexity).  Groceries imply a geography of agriculture, industry, transport, communication and financialisation driven by flows of labour and capital. Encounters between this hyper-complex geography and people, even in the familiar confines of a supermarket, are no simple matter, either for shoppers or for supermarket operators such as Tesco. While there are many facets to shopping (see [@Miller_2012] for an account of shopping as a practice that addresses discrepancies between normative and actual social order, and as a sacrificial ritual that instates social order), the shopping list, whether written on the back of an envelope, or saved as a list in an online grocery shopping system, is one intersectional ordering device that configures a universe of possible references, and a teeming multitude of propensities, into a possible order (in both senses of that term: an ordering and an imperative). As people shop, either by  trawling along aisles packed with thousands of products, or scrolling down screens or searching for particular brands amidst search results, lists inscribe some kind of order that filters or reduces the excessive propensities, claims, dazzle and distraction of commodities.
+The shelves of large contemporary supermarket are the endpoint of global logistic supply chains, in all their logistical, value-transforming and brand-mediated hypercomplexity (see [@Neilson_2012; @Tsing_2009]).  Groceries imply a planetary geography of agriculture, industry, transport, communication and financialisation animated by flows of labour and capital. Encounters between this hyper-complex commodity-geography and people, even in the familiar confines of a supermarket, are no simple matter, either for shoppers or for supermarket operators such as Tesco. For shoppers, as Daniel Miller has argued [@Miller_2012],  shopping takes place as a negotiation of discrepancies between normative and actual social order (for instance, between ideals of health and commitments to thrift). It can also be seen  as a sacrificial ritual that re-instates social order in various ways. 
 
-While hand-written shopping lists undoubtedly have ongoing importance and display interestingly mixed ordering practices (see the list of handwritten shopping lists at [Grocery List](http://www.grocerylist.org)), online shopping lists are written and re-written at the intersection of web and internet infrastructures, supply chain logistics, individualised practices and *habitus,* and increasingly, the predictive operations of  recommender systems. Just as the aisles and shelves of a supermarket present a commercially-ordered geography of needs and desires,  online shopping recommender systems generate lists that seek to align people to commodities they otherwise might have little relation to.  
+The shopping list, whether written on the back of an envelope, or saved as a list in an online grocery shopping system, lies at the intersection of these flows, orderings, values and negotiations.  It is an intersectional ordering device that encapsulates a universe of possible references, and a teeming multitude of propensities with an actual local order (in both senses of that term: an ordering and an imperative). As people shop, either by  trawling along aisles packed with thousands of products, or scrolling down screens or searching for particular brands amidst search results, lists inscribe some kind of order that filters or reduces the excessive propensities, claims, dazzle and distraction of commodities to the practicalities of domestic economy.
+
+Hand-written shopping lists undoubtedly have ongoing importance and display interestingly mixed ordering practices (see the montage of handwritten shopping lists at [Grocery List](http://www.grocerylist.org)). But online shopping lists take shape at the intersection of web and internet infrastructures, supply chain logistics, individualised practices and *habitus,* and increasingly, the predictive operations of  recommender systems. Just as the aisles and shelves of a supermarket present a densely-woven semiotics of objects competing for visual attention by offering distinctions of taste, thrift, expedience, novelty, indulgence, health and so forth, online shopping recommender systems generate lists that seek to align people to commodities they otherwise might have little relation to.  
 
 ```{r random-basket, echo=FALSE, cache=TRUE, fig.cap='Random basket'}
 library(dplyr)
@@ -61,33 +62,30 @@ kable(sample_n(df, size=5)$name, col.names='item')
 include_graphics('figure/1_shopping.png')
 ```
 
-The items on this list could be recommendations. They are only a few of them: five. The question is: which five items and in what order? In terms of content, there are many similarities between shopping lists such as Figure \@ref(fig:shopping-hand)  -- a dozen lines scrawled on the back of a used envelope stuck on the refrigerator door  --  and the five ranked items shown to a customer on an online shopping site (as shown in Table \@ref(tab:random-basket)). While they are similar in content,  the list of five suggestions shown to Tesco's online customers at the checkout  exemplify a transformation in forms of ordering, a transformation that may affect the ontological texture of the world in the same way that commodification does. In its re-writing of the list, the recommender system effects a conversion experience in which individualised desire, consumption practices, value-chains, infrastructural time-space dynamics, the lives of others and the propensities of things all come into play.   A major contemporary form of ordering, the recommendation list, that we see in many  forms of news, media, entertainment, marketing, advertising, can be seen as what the philosopher of science Karl Popper called  a 'crystallisation of propensities' [@Popper_1990, 18].
+The items on Tesco's 'Have You Forgotten?' list are recommendations. They are only a few of them: five. The question is: which five items and in what order? In terms of content, there are many similarities between shopping lists such as Figure \@ref(fig:shopping-hand)  -- a dozen lines scrawled on the back of a used envelope stuck on the refrigerator door  --  and the five ranked items shown to a customer on an online shopping site (as shown in Table \@ref(tab:random-basket)). Even if they are similar in content,  the list of five suggestions shown to Tesco's online customers at the checkout  exemplifies a transformation in forms of ordering. In its re-writing of the list, the recommender system reassembles individualised desire, consumption practices, value-chains, infrastructural time-space dynamics, the lives of others and the propensities of things.   A major contemporary form of ordering, the recommender system can be found in many  forms of news, media, entertainment, marketing, and advertising.
 
-The Tesco presentation I saw was not really surprising or exceptional. It was a presentation by a data scientist to data scientists, describing an implementation of a predictive model as well as some of the problems and potentials of the predictive model.  The presentation provides some materials for an exploration of the form, techniques, and to certain extent, experience of predictive ordering. In this paper, I re-present the presentation using a mixture of theoretical and practical resources. The theory is largely recent media theory and its accounts of prediction. The practical resources are that of coding and predictive models, and online grocery data.[^12]
 
-[^12]: The problem of incomplete lists reminds me of the game 'I went shopping and I bought ... ' that adults sometimes play with children.  The game is about remembering a well-ordered list of items - 'a' is apple, 'b' is for banana, 'c' is for carrot.  The point of the game is to use the well-ordered set of labels provided by the sequence of letters in the alphabet to remember a random and perhaps very diverse list of items. The longer the game continues, the harder it is to remember since the shopping list grows longer. At the same time, each player repeats the list, and this  helps memorisation. One trick in playing this game is to choose items that are quite unexpected or increasingly random. Rather than `ham`, list `halva`; rather than `fish`, add `face cream.` This is especially useful for adults in beating children. The children have better memories for items they know, but adults know more unexpected items. On the other hand, very unexpected items are quite easy to remember and tend to even the score in the favour of the children. Balancing between the improbable and memorable, between a predictable list like 'apples, bananas, carrots' and an unusual list such as 'agave syrup, boccadilla, cilantro' is complicated. Something similar applies to recommender systems. The system can remember very many things. It may know everything you bought in the last few years on that site, and it can easily see what you would normally buy and add those as suggestions.
-
-Despite being titled 'Have You Forgotten?' Tesco's recommender system does not suggest forgotten items.  It focuses on 'conversion events.' If a shopper does buy  recommended items, 'conversion' has occurred.  From a supermarket perspective, high-value conversion are desirable. There is little value in successfully recommending small or cheap items such as rubber bands or toothpicks.  From a data science perspective, conversion events, when they occur, confirm the power of predictive analytics to change the world in some way. From a sociological perspective, matters are less obvious. Constructing and configuring recommender system in the name of conversion events, the recommender system effects an epistemic-operational transformation central to big data. We might regard the recommender system as an operational formation that responds to an ongoing control crisis associated with information [@Beniger_1986]. We might also explore these conversion events in terms of how predictive analytics happens in the world, how the tendency of things to realize certain events -- what Popper terms the 'propensities of things' [@Popper_1990, 11] -- happens in and through data practices.   Data in concert with calculation, models, infrastructures, and experiments, affords apprehension, visibility and management of associative propensities in the world.  Recommender systems, then, are vitally concerned not just with conversion events, but also with the what counts as order in the world. 
+Despite being titled 'Have You Forgotten?' Tesco's recommender system  focuses on 'conversion events.' If a shopper does buy a recommended item, 'conversion' has occurred.  From a supermarket perspective, high-value conversion are desirable. There is little value in successfully recommending small or cheap items such as rubber bands or toothpicks. Conversion events, when they occur, confirm the power of predictive analytics to change the world in some way. From a sociological perspective, the significance of conversion events is far less obvious. In the name of conversion events, recommender systems stage an epistemic-operational transformation central to big data. In conversion events,  predictive analytics happens in the world.  The tendency of things to realize certain events -- what Popper terms the 'propensities of things' [@Popper_1990, 11] -- happens  through data practices.   Data in concert with calculation, models, infrastructures, and experiments, affords apprehension, visibility and management of associative propensities in the world.
 
 ## Lists and orders
 
-Lists have long interested historians, anthropologists, sociologists, literary and media theorists. If, as the social anthropologist Jack Goody argued, lists are historically primary as forms of writing [@Goody_1986], and if list-making and its later variants (e.g. tables) precede discursive and narrative writing practices, then we might expect lists to function as powerful social ordering devices. As literary scholars suggest (see [@Mainberger_2003]), although lists have often been de-valued as literary forms, list-making often appears, even in literary form, whenever writing seeks to address, name, group or evoke totality, profusion, excess or abundance. More recent sociological work on lists (see [@deGoede_2016] for an overview) confirms the potency of lists as ordering devices. From both  anthropological and literary perspectives, shopping lists have excellent reasons to exist: they are deeply rooted in urban social formations historically and culturally. Lists such as online grocery recommendations weave together people, infrastructures, things, places and predictions.[^1.456]    
+In grocery shopping, conversion events derive from and affect lists. Whether  they write out shopping lists or not, online grocery shoppers interact with commodities through lists.  Lists have long interested historians, anthropologists, sociologists, literary and media theorists as everyday ordering devices. If, as the social anthropologist Jack Goody argued, lists are historically primary as forms of writing [@Goody_1986], and if list-making and its later variants (e.g. tables) precede discursive and narrative writing practices, then we might expect lists to function as powerful social ordering devices. More recent sociological work on lists (see [@deGoede_2016] for an overview) explore the social and political potency of lists as ordering devices. As literary scholars suggest (see [@Mainberger_2003]), even if lists have often been de-valued as literary forms, list-making commonly appears in literary form whenever writing seeks to address, name, group or evoke totality, profusion, excess or abundance. From both  anthropological and literary perspectives, shopping lists have excellent reasons to exist: they are deeply rooted in organisational life and infrastructures. Lists weave together people, infrastructures, things, and places.[^1.456]    
 
-[^1.456]: While lists intersect strongly with other meaning and sense-making practices in everyday life and popular culture, they can be refractory to discourse  and textual analysis methods built around models of language or speech, with its rules of syntax and grammar. On the one hand, lists are highly associative. They can be interpreted or decoded semiotically, although they exhibit  variations in textuality -- how they are written and read -- that thwart semiotic readings. On the other hand, as operational inscriptions, they can be treated ethnomethodologically, as the production of social order in a given setting. 
+[^1.456]: While lists intersect strongly with other meaning and sense-making practices in everyday life and popular culture, they can be refractory to discourse  and textual analysis methods built around models of language or speech, with its rules of syntax and grammar. On the one hand, lists are highly associative. They can be interpreted or decoded semiotically, although they exhibit  variations in textuality -- how they are written and read -- that thwart semiotic readings. On the other hand, as operational inscriptions, they can be treated ethnomethodologically, as the production of social order in a given setting. We might, in the light of their mutability, permeability and embedding in social order,  approach lists from various theoretical angles -- as asignifying semiotics as Maurizio Lazzarato calls it in his _Signs and Machines_ [@Lazzarato_2014] or as elements in 'a new order of spatio-temporal continuity for forms of economic, political and cultural life' as Celia Lury puts it in her account of topological turn [@Lury_2012].
 
-We might, in the light of their mutability, permeability and embedding in social order,  approach lists from various theoretical angles -- as asignifying semiotics as Maurizio Lazzarato calls it in his _Signs and Machines_ [@Lazzarato_2014] or as elements in 'a new order of spatio-temporal continuity for forms of economic, political and cultural life' as Celia Lury puts it in her account of topological turn [@Lury_2012]. In this paper, I focus on lists and list-making in terms of the predictive conditions of contemporary media experience [@Hansen_2015a].
+In this paper, I focus on lists and list-making in terms of the predictive social orderings.   All lists are forms of order. Mathematicians distinguish lists from sets on the basis of order. Formally, both lists and sets are collections, but a list also contains a mapping of its elements to an ordering, usually the natural or counting numbers. Sometimes this order is explicit. Numbers are written down one side of the list. Often the order is implicit to the spatial arrangement of the list.  Mappings between list order and social order are manifestly highly contingent. A flight checklist differs greatly from a personal to-do list, even if they share many formal properties.  Listing practices in a given social setting, therefore, always index an engagement between the formal properties of the list and the necessarily more fluid dynamics of social order. From the perspective of social order, shopping lists, as they are co-constructed by a supermarket chain's recommender system, might be important intersectional zones for the conversion of average everydayness through data-analytic propensities. 
 
-All lists are forms of order. Mathematicians distinguish lists from sets on the basis of order. Formally, both lists and sets are collections, but a list also contains a mapping of its elements to an ordering, usually the natural or counting numbers. Sometimes this order is explicit. Numbers are written down one side of the list. Often the order is implicit to the spatial arrangement of the list.  Even random order can be  operationally important (for instance, in gambling machine or a psychology experiment, randomly order lists might be important).  Mappings between list order and social order are manifestly highly contingent. Listing practices in a given social setting, however, always index its engagement with necessary unstable dynamics of social order. From the perspective of social order, shopping lists, as they are co-constructed by a supermarket chain's recommender system, might be important intersectional zones for the conversion of the average everydayness of lists through data-analytic propensities. 
-
-The media theorist Mark Hansen has recently suggested that 
+How should we view the predictive re-writing of lists? The media theorist Mark Hansen has recently suggested that 
 
 > predictive analytics are discoveries of micrological propensities that are not directly correlated with human understanding and affectivity and that do not by themselves cohere into clearly identifiable events [@Hansen_2015a, 111-112]
 
-This assertion resonates with many accounts of big data.  The expectation exercising much contemporary work on data, on media, platforms and finance pivots on 'micrological propensities' that might only become evident given enough data.  Hansen argues that an ontological transformation links the micrological propensities of things in the world to prediction:
+Hansen's account resonates with wider views of big data.  The expectation energising much predictive practice  pivots on 'micrological propensities' elicited from data.  Hansen  links his Whitehead-inspired ontology to propensities of things in the world via probabilities:
 
 >Whatever explanatory and causal value predictive analytics of large datasets have is, I suggest, ultimately rooted in this ontological transformation whereby probabilities are understood to be expressions of the actual propensity of things [@Hansen_2015a, 120] 
 
-Hansen predicates prediction as an 'ontological transformation' that affects probabilities. It links probabilities as calculations to propensities or the mutable agencies of things. The practical and indeed empirical  question is whether such transformations in probability that bring 'the propensities of things'  can be detected and articulated in the prosaic setting of shopping lists and  recommendations. I will argue that 'conversion' is a preferable term for these changes.  It highlights  re-orientations in subjects, experience, things, numbers and structures that ranges more widely than Hansen's subjective 'understood-to-be-expressed' formulation.
+Hansen predicates prediction as an 'ontological transformation' that deploys probabilities in an evermore closely woven and encompassing expression of the animated, eventful, propensities of things. Predictive analytics links probabilities as calculations to propensities or the mutable agencies of things. The practical and indeed empirical  question is whether such transformations in probability that bring 'the propensities of things'  can be detected and articulated in the prosaic setting of shopping lists and recommender systems.[^20.1]
+
+[^20.1]: I will argue that 'conversion' is a preferable term for these changes.  It highlights  re-orientations in subjects, experience, things, numbers and structures that ranges more widely than Hansen's 'ontological transformation' formulation.
 
 ## Conversion events: DunnHumby's work for Tesco
 
